adjsuted ci and cd yaml files

--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -1,3 +1,4 @@
+# .github/workflows/cd.yml
 name: CD Pipeline
 
 on:
@@ -7,45 +8,50 @@ on:
 
 jobs:
   deploy:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
+    env:
+      K8S_MANIFEST: k8s/all.yaml
+
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
 
-      - name: Set up SSH
-        uses: webfactory/ssh-agent@v0.9.0
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
         with:
-            ssh-private-key: ${{ secrets.EC2_PRIVATE_KEY }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-central-1       # ← your AWS region
 
-      - name: Deploy Docker containers on EC2
+      - name: Install kubectl
+        uses: azure/setup-kubectl@v3
+        with:
+          version: 'latest'
+
+      - name: Update kubeconfig for EKS
         run: |
-          ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_HOST }} "
-            # Pull latest images
-            sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/basic3tier-api:latest
-            sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/basic3tier-ui:latest
+          aws eks update-kubeconfig \
+            --region eu-central-1 \
+            --name ${{ secrets.EKS_CLUSTER_NAME }}
 
-            # Create a Docker network
-            sudo docker network create my3tier || true
+      - name: Deploy to EKS
+        run: |
+          kubectl apply -f $K8S_MANIFEST
 
-            # Run Postgres
-            sudo docker rm -f my3tier-db || true
-            sudo docker run -d --network my3tier --name my3tier-db \
-              -e POSTGRES_USER=postgres \
-              -e POSTGRES_PASSWORD=admin123 \
-              -e POSTGRES_DB=basic3tier \
-              -p 5432:5432 \
-              postgres
+      - name: Wait for backend rollout
+        run: |
+          kubectl rollout status deployment/backend --timeout=2m
 
-            # Run the API
-            sudo docker rm -f my3tier-api || true
-            sudo docker run -d --network my3tier --name my3tier-api \
-              -p 5000:80 \
-              -e ConnectionStrings__Basic3Tier=\"Host=my3tier-db;Port=5432;Database=basic3tier;Username=postgres;Password=admin123\" \
-              ${{ secrets.DOCKERHUB_USERNAME }}/basic3tier-api:latest
+      - name: Wait for frontend rollout
+        run: |
+          kubectl rollout status deployment/frontend --timeout=2m
 
-            # Run the UI
-            sudo docker rm -f my3tier-ui || true
-            sudo docker run -d --network my3tier --name my3tier-ui \
-              -p 80:80 -e API_URL="http://${{ secrets.EC2_HOST }}:5000/" \
-              ${{ secrets.DOCKERHUB_USERNAME }}/basic3tier-ui:latest
-          "
+      - name: Smoke-test frontend
+        run: |
+          LB=$(kubectl get svc frontend-service \
+               -o jsonpath='{.status.loadBalancer.ingress[0].hostname}')
+          echo "Testing http://$LB …"
+          curl --fail http://$LB
+
+
