--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,3 +1,4 @@
+# .github/workflows/ci.yml
 name: CI Pipeline
 
 on:
@@ -7,27 +8,65 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build-test-and-docker:
+  build-test-scan-and-push:
     runs-on: ubuntu-latest
+    env:
+      IMAGE_REGISTRY: docker.io
+      IMAGE_NAMESPACE: ${{ secrets.DOCKERHUB_USERNAME }}
+      BACKEND_IMAGE: ${{ secrets.DOCKERHUB_USERNAME }}/backend3tier:v.1
+      FRONTEND_IMAGE: ${{ secrets.DOCKERHUB_USERNAME }}/frontend3tier:v.1
 
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
 
-      - name: Set up .NET
+      - name: Set up .NET 7.0 SDK
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: '7.0.x'
 
+      - name: Restore & build backend
+        run: |
+          cd api
+          dotnet restore
+          dotnet build --no-restore --configuration Release
+
+      - name: Run backend tests
+        run: |
+          cd api
+          dotnet test --no-build --verbosity normal
+
+      # If you have frontend tests, add them here; otherwise skip this.
+      # - name: Install Node & test UI
+      #   uses: actions/setup-node@v3
+      #   with: node-version: '18'
+      # - run: |
+      #     cd ui
+      #     npm install
+      #     npm test
+
+      - name: Security scan (Trivy)
+        uses: aquasecurity/trivy-action@v0.3.0
+        with:
+          scan-type: filesystem
+          scan-paths: |
+            api
+            ui
+        # will fail the step if any vulnerabilities of HIGH or CRITICAL are found
+        env:
+          TRIVY_SEVERITY: CRITICAL,HIGH
+
       - name: Log in to Docker Hub
-        run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+        run: echo "${{ secrets.DOCKERHUB_TOKEN }}" \
+               | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
       - name: Build Docker images
         run: |
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/basic3tier-ui:latest ./ui
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/basic3tier-api:latest ./api
+          docker build -t $BACKEND_IMAGE ./api
+          docker build -t $FRONTEND_IMAGE ./ui
 
       - name: Push Docker images
         run: |
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/basic3tier-ui:latest
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/basic3tier-api:latest
+          docker push $BACKEND_IMAGE
+          docker push $FRONTEND_IMAGE
+
