adjsuted ci and cd yaml files2

--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -1,4 +1,3 @@
-# .github/workflows/cd.yml
 name: CD Pipeline
 
 on:
@@ -22,7 +21,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: eu-central-1       # ← your AWS region
+          aws-region: eu-central-1       # ← adjust if needed
 
       - name: Install kubectl
         uses: azure/setup-kubectl@v3
@@ -53,5 +52,4 @@ jobs:
                -o jsonpath='{.status.loadBalancer.ingress[0].hostname}')
           echo "Testing http://$LB …"
           curl --fail http://$LB
-
 
