--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,4 +1,3 @@
-# .github/workflows/ci.yml
 name: CI Pipeline
 
 on:
@@ -8,11 +7,9 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build-test-scan-and-push:
+  build-test-and-push:
     runs-on: ubuntu-latest
     env:
-      IMAGE_REGISTRY: docker.io
-      IMAGE_NAMESPACE: ${{ secrets.DOCKERHUB_USERNAME }}
       BACKEND_IMAGE: ${{ secrets.DOCKERHUB_USERNAME }}/backend3tier:v.1
       FRONTEND_IMAGE: ${{ secrets.DOCKERHUB_USERNAME }}/frontend3tier:v.1
 
@@ -36,24 +33,15 @@ jobs:
           cd api
           dotnet test --no-build --verbosity normal
 
-      # Uncomment and configure if you have frontend tests
-      # - name: Install Node & test UI
+      # If you have frontend tests, uncomment and configure:
+      # - name: Install Node.js & test UI
       #   uses: actions/setup-node@v3
-      #   with: node-version: '18'
+      #   with:
+      #     node-version: '18'
       # - run: |
       #     cd ui
       #     npm install
       #     npm test
-
-      - name: Security scan (Trivy)
-        uses: aquasecurity/trivy-action@v0.11.0
-        with:
-          scan-type: filesystem
-          scan-paths: |
-            api
-            ui
-        env:
-          TRIVY_SEVERITY: CRITICAL,HIGH
 
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKERHUB_TOKEN }}" \
