--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,53 +7,33 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build-test-and-push:
+  build-test-and-docker:
     runs-on: ubuntu-latest
-    env:
-      BACKEND_IMAGE: ${{ secrets.DOCKERHUB_USERNAME }}/backend3tier:v.1
-      FRONTEND_IMAGE: ${{ secrets.DOCKERHUB_USERNAME }}/frontend3tier:v.1
 
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
 
-      - name: Set up .NET 7.0 SDK
+      - name: Set up .NET
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: '7.0.x'
 
+      - name: Log in to Docker Hub
+        run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+
       - name: Restore & build backend
         run: |
-          cd api
-          dotnet restore
-          dotnet build --no-restore --configuration Release
-
-      - name: Run backend tests
-        run: |
-          cd api
-          dotnet test --no-build --verbosity normal
-
-      # If you have frontend tests, uncomment and configure:
-      # - name: Install Node.js & test UI
-      #   uses: actions/setup-node@v3
-      #   with:
-      #     node-version: '18'
-      # - run: |
-      #     cd ui
-      #     npm install
-      #     npm test
-
-      - name: Log in to Docker Hub
-        run: echo "${{ secrets.DOCKERHUB_TOKEN }}" \
-               | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+          dotnet restore ./Basic3TierAPI/Basic3TierAPI.csproj
+          dotnet build ./Basic3TierAPI/Basic3TierAPI.csproj --no-restore --configuration Release
 
       - name: Build Docker images
         run: |
-          docker build -t $BACKEND_IMAGE ./api
-          docker build -t $FRONTEND_IMAGE ./ui
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/backend3tier:v.1 ./api
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/frontend3tier:v.1 ./ui
 
       - name: Push Docker images
         run: |
-          docker push $BACKEND_IMAGE
-          docker push $FRONTEND_IMAGE
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/backend3tier:v.1
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/frontend3tier:v.1
 
