--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -7,10 +7,7 @@ on:
 
 jobs:
   deploy:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
-    env:
-      K8S_MANIFEST: k8s/all.yaml
 
     steps:
       - name: Check out repository
@@ -21,35 +18,20 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: eu-central-1       # ← adjust if needed
+          aws-region: eu-central-1
 
-      - name: Install kubectl
+      - name: Set up kubectl
         uses: azure/setup-kubectl@v3
         with:
           version: 'latest'
 
-      - name: Update kubeconfig for EKS
+      - name: Update kubeconfig for EKS cluster
         run: |
           aws eks update-kubeconfig \
             --region eu-central-1 \
-            --name ${{ secrets.EKS_CLUSTER_NAME }}
+            --name my-eks-lab-sebi
 
       - name: Deploy to EKS
         run: |
-          kubectl apply -f $K8S_MANIFEST
-
-      - name: Wait for backend rollout
-        run: |
-          kubectl rollout status deployment/backend --timeout=2m
-
-      - name: Wait for frontend rollout
-        run: |
-          kubectl rollout status deployment/frontend --timeout=2m
-
-      - name: Smoke-test frontend
-        run: |
-          LB=$(kubectl get svc frontend-service \
-               -o jsonpath='{.status.loadBalancer.ingress[0].hostname}')
-          echo "Testing http://$LB …"
-          curl --fail http://$LB
+          kubectl apply -f k8s/all.yaml
 
